<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/img_1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/main_logo"
        android:src="@drawable/login_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-194dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_username"
        app:layout_constraintTop_toBottomOf="@id/img_1"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@id/edt_username"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_logo"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logo_ipb_baru"
            android:contentDescription="@string/logo_ipb" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logo_klhk"
            android:contentDescription="@string/logo_klhk" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logo_manggala"
            android:contentDescription="@string/logo_manggala"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:src="@drawable/logo_lpdp_dark"
            android:contentDescription="@string/logo_manggala"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logo_itto"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/logo_manggala"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>