<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ilmukomputeripb.patrolikarhutla.uifragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ilmukomputeripb.patrolikarhutla.uifragment.Darat.PatroliDaratFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_patroli_darat" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ilmukomputeripb.patrolikarhutla.uifragment.Observasi.PatroliObservasiFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_patroli_observasi" />
</navigation>