<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".uifragment.main.PatroliUmumFragment">

    <TextView
        android:id="@+id/tv_data_umum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/data_umum"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_wajib_diisi"
        android:text="@string/wajib_diisi"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_data_umum"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_kategori_patroli"
        android:text="@string/kategori_patroli"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_wajib_diisi"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/kategori_patroli"
        android:hint="@string/pilih_kategori_patroli"
        app:layout_constraintTop_toBottomOf="@id/tv_kategori_patroli"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        app:endIconMode="none">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_kategori_patroli"
            android:focusableInTouchMode="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_aktivitas_harian"
        android:text="@string/aktivitas_harian"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/kategori_patroli"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aktivitas_harian"
        android:hint="@string/pilih_aktivitas_harian"
        app:layout_constraintTop_toBottomOf="@id/tv_aktivitas_harian"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        app:endIconMode="none">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_aktivitas_harian"
            android:focusableInTouchMode="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_anggota_patroli"
        android:text="@string/anggota_patroli"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/aktivitas_harian"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/anggota_patroli"
        android:hint="@string/pilih_anggota_patroli"
        app:layout_constraintTop_toBottomOf="@id/tv_anggota_patroli"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        app:endIconMode="none">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_anggota_patroli"
            android:focusableInTouchMode="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_inventori_patroli"
        android:text="@string/inventori_patroli"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/anggota_patroli"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inventori_patroli"
        android:hint="Pilih Inventori Patroli"
        app:layout_constraintTop_toBottomOf="@id/tv_inventori_patroli"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        app:endIconMode="none">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_inventori_patroli"
            android:focusableInTouchMode="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_satelit_hotspot"
        android:text="@string/satelit_hotspot"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/inventori_patroli"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/satelit_hotspot"
        android:hint="@string/pilih_satelit"
        app:layout_constraintTop_toBottomOf="@id/tv_satelit_hotspot"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        app:endIconMode="none">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_satelit_hotspot"
            android:focusableInTouchMode="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/divider"
        app:layout_constraintTop_toBottomOf="@id/satelit_hotspot"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_dokumentasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:text="@string/dokumentasi"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/iv_dokumentasi"
        app:layout_constraintTop_toBottomOf="@id/tv_dokumentasi"
        android:src="@drawable/ic_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_no_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_dokumentasi"
        android:textColor="@color/black"
        android:text="@string/no_photo" />

    <com.ilmukomputeripb.patrolikarhutla.customview.CustomButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/tambah_foto"
        android:id="@+id/btn_upload_documentation"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_no_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>