<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_gray"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="8dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:background="@color/white">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/img_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="30dp"
                android:src="@mipmap/ic_user_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_name"
                app:layout_constraintStart_toEndOf="@id/img_profile"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/patroli"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_daerah_operasi"
                android:text="@string/daerah_operasi"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
                app:layout_constraintStart_toEndOf="@id/img_profile"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_daerah_operasi_content"
                app:layout_constraintStart_toEndOf="@id/tv_profile_daerah_operasi"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
                android:layout_marginTop="4dp"
                android:textColor="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_nomor_registrasi"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/nomor_registrasi"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_nomor_registrasi_content"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_nomor_registrasi"
                app:layout_constraintStart_toStartOf="parent"
                android:text="XXX"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_email"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_nomor_registrasi_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_email_content"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_email"
                app:layout_constraintStart_toStartOf="parent"
                android:text="XXX"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_phone"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_email_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/no_hp"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_phone_content"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_phone"
                app:layout_constraintStart_toStartOf="parent"
                android:text="XXX"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_daop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/daerah_operasi"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_daop_content"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_daop"
                app:layout_constraintStart_toStartOf="parent"
                android:text="XXX"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_desa"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_daop_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/desa"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_desa_content"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_desa"
                app:layout_constraintStart_toStartOf="parent"
                android:text="XXX"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_tim"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_desa_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/tim"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.ilmukomputeripb.patrolikarhutla.customview.CustomButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_change_password"
            android:text="@string/ubah_password"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</FrameLayout>